--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,17 +28,6 @@ bind-key -n M-3 switch-client -t :3 \; run-shell "tmux_status_toggle.sh :3"
 bind-key -n M-4 switch-client -t :4 \; run-shell "tmux_status_toggle.sh :4"
 bind-key -n M-5 switch-client -t :5 \; run-shell "tmux_status_toggle.sh :5"
 
-# vim-like scrolling in copy mode after pressing prefix
-bind-key -n M-h copy-mode \; send-keys -X cursor-left
-bind-key -n M-j copy-mode \; send-keys -X cursor-down
-bind-key -n M-k copy-mode \; send-keys -X cursor-up
-bind-key -n M-l copy-mode \; send-keys -X cursor-right
-
-bind-key -n C-M-h run "tmux copy-mode \; tmux send-keys -X halfpage-left"
-bind-key -n C-M-j run "tmux copy-mode \; tmux send-keys -X halfpage-down"
-bind-key -n C-M-k run "tmux copy-mode \; tmux send-keys -X halfpage-up"
-bind-key -n C-M-l run "tmux copy-mode \; tmux send-keys -X halfpage-right"
-
 set-hook -g after-new-window "run-shell 'tmux_status_toggle.sh #{window_id}'"
 
 bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/personal/todo.md"
@@ -84,6 +73,8 @@ set-window-option -g clock-mode-colour colour109 #blue
 
 # bell
 set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
+
+set-option -g renumber-windows on
 
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
 set-option -g status-justify "left"
